--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@
     --bg-black: #fff;
     --text-white: #000;
     --text-black: #fff;
+    --bg-light: #000;
     /* --text-gray: #000; */
     --icon-color: #fff;
 }
@@ -142,6 +143,7 @@ h3 {
     margin-bottom: 0.9375rem;
     font-family: var(--primary-font);
     text-transform: uppercase;
+    line-height: 4rem;
 }
 h4{
     font-size: 1.5rem;
@@ -152,7 +154,7 @@ h4{
 h5 {
     font-size: 1.5rem;
     font-weight: 500;
-    color: var(--text-black2);
+    color: #fa701a;
     margin-bottom: 2.1875rem;
 }
 
@@ -300,6 +302,16 @@ p{
     overflow-x: hidden;
 } */
 
+/* skilss section  */
+.skilss_wrapper {
+    display: grid;
+    gap: 1rem;
+    padding: 0;
+    margin: 0;
+}
+.skilss_wrapper .progress-bar{
+    background: var(--gradient);
+}
 /* Project section  */
 .project_wrapper .cards{
     background-color: var(--bg-light);
@@ -312,7 +324,7 @@ p{
 
 .project_wrapper .cards:hover{
     box-shadow: 0 0.9375rem 1.875rem rgb(77 87 222/30%);
-    background: #fff;
+    background: var(--bg-white);
 }
 
 /* Contact Section  */
